clean api from unnecessary functions and lines of code. fix Delete and Put requests for /notes
